@@ -1,3 +1,0 @@
-/* this file is automatically generated by configure - don't change */
-void fe_silc_modules_init(void) {  }
-void fe_silc_modules_deinit(void) {  }
